--- a/app/src/main/res/layout/content_profile_edit_contact_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_contact_info.xml
@@ -132,7 +132,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/second_mob_no"
-                        android:inputType="phone"
+                        android:inputType="numberSigned"
                         android:maxLines="1"
                         android:maxLength="15"
                         android:textColor="@color/textColors"
