--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -73,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/new_pin"
-                    android:inputType="phone"
+                    android:inputType="numberSigned"
                     android:maxLength="6"
                     android:maxLines="1"
                     android:textSize="@dimen/_13sdp"
@@ -104,7 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/confirm_new_pin"
-                    android:inputType="phone"
+                    android:inputType="numberSigned"
                     android:maxLength="6"
                     android:maxLines="1"
                     android:textSize="@dimen/_13sdp"
