--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -104,7 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/confirm_new_pin"
-                    android:inputType="numberSigned"
+                    android:inputType="numberSigned|numberPassword"
                     android:maxLength="6"
                     android:maxLines="1"
                     android:textSize="@dimen/_13sdp"
@@ -126,7 +126,6 @@
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/ripple_green_button"
                 android:text="@string/submit"
-                android:textStyle="bold"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
