--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -73,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/new_pin"
-                    android:inputType="numberSigned"
+                    android:inputType="numberSigned|numberPassword"
                     android:maxLength="6"
                     android:maxLines="1"
                     android:textSize="@dimen/_13sdp"
