--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -100,6 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_28sdp"
                 android:gravity="center"
+                android:focusable="true"
                 android:visibility="gone"
                 android:textSize="@dimen/_10sdp"
                 android:text="@string/apply_loan"
