--- a/app/src/main/res/layout/fragment_lpk.xml
+++ b/app/src/main/res/layout/fragment_lpk.xml
@@ -27,8 +27,8 @@
             <ImageView
                 android:id="@+id/imgWithdrawal"
                 android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_75sdp"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="wrap_content"
                 android:padding="@dimen/_3sdp"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -121,9 +121,11 @@
             <ImageView
                 android:id="@+id/imgSavings"
                 android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_75sdp"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="wrap_content"
                 android:padding="@dimen/_3sdp"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/txtLineTwo"
                 app:layout_constraintTop_toTopOf="parent"
