--- a/app/src/main/res/layout/content_loan_plan_details.xml
+++ b/app/src/main/res/layout/content_loan_plan_details.xml
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/interest_rate"
+                        android:text="@string/interest_day"
                         android:textColor="@color/color_gray_light"
                         android:textSize="@dimen/_13sdp" />
 
@@ -246,7 +246,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/actual_loan_amount"
+                        android:text="@string/approx_loan_amount"
                         android:textColor="@color/color_semi_deep_black"
                         android:textSize="@dimen/_14sdp" />
 
