--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -731,6 +731,7 @@
                                 android:padding="@dimen/_5sdp">
 
                                 <com.app.l_pesa.common.CommonTextRegular
+                                    android:id="@+id/txt_date"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/approval_date"
