--- a/app/src/main/res/layout/fragment_lpk.xml
+++ b/app/src/main/res/layout/fragment_lpk.xml
@@ -91,6 +91,7 @@
                 android:fontFamily="@font/montserrat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/_11sdp"
                 android:text="@string/lpk_withdrawal_text"
                 android:textColor="@color/text_color_blue"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -186,6 +187,7 @@
                 android:fontFamily="@font/montserrat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/_11sdp"
                 android:textColor="@color/text_color_blue"
                 android:text="@string/lpk_saving_text"
                 app:layout_constraintBottom_toBottomOf="parent"
