--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -173,14 +173,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
             android:contentDescription="@string/app_name"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/textView8"
             app:layout_constraintEnd_toStartOf="@+id/textView8"
             app:layout_constraintStart_toEndOf="@+id/view4"
             app:srcCompat="@drawable/ic_calendar_icon" />
 
         <TextView
             android:id="@+id/textView8"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
@@ -188,10 +188,10 @@
             android:text="@string/maturity_on"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_10sdp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView6"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView6"
-            app:layout_constraintTop_toTopOf="@+id/imageView6"
-             />
+            app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
 
         <TextView
@@ -212,13 +212,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
+            android:gravity="start|center"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_12sdp"
-            android:gravity="start|center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
 
        <com.app.l_pesa.common.CommonTextRegular
