--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -9,7 +9,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/_3sdp">
 
 
@@ -54,11 +54,11 @@
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtDepositAmount"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="18dp"
             android:layout_marginStart="@dimen/_2sdp"
+            android:gravity="start|center"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_11sdp"
-            android:gravity="start|center"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toStartOf="@+id/view4"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -113,15 +113,16 @@
             android:text="@string/interest_rate"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
         <View
             android:id="@+id/view4"
-            android:layout_width="1dp"
-            android:layout_height="72dp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_width="@dimen/_1sdp"
+            android:layout_height="@dimen/_75sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
             android:background="@color/divider_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -194,18 +195,18 @@
             app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
 
-        <TextView
-            android:id="@+id/textView36"
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtRate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_3sdp"
             android:textColor="@color/textColors"
-            android:textSize="@dimen/_10sdp"
+            android:textSize="@dimen/_11sdp"
             android:gravity="start|center"
             app:layout_constraintBottom_toBottomOf="@+id/txtInterestRate"
             app:layout_constraintEnd_toStartOf="@+id/view4"
             app:layout_constraintStart_toEndOf="@+id/txtInterestRate"
-            app:layout_constraintTop_toTopOf="@+id/txtInterestRate" />
+            />
 
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtMaturityDate"
@@ -263,6 +264,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view4"
              />
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtDurationTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColors"
+            android:textSize="@dimen/_11sdp"
+            android:gravity="start|center"
+            android:layout_marginStart="@dimen/_2sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintEnd_toStartOf="@+id/view4"
+            app:layout_constraintStart_toEndOf="@+id/txtDuration"
+            app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
 
     </android.support.constraint.ConstraintLayout>
