--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -89,6 +89,7 @@
                             android:id="@+id/left_header_txt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
                             android:textColor="@color/colorApp"
                             android:textSize="@dimen/_12sdp"
                             android:layout_centerHorizontal="true"
@@ -100,8 +101,8 @@
                     <View
                         android:layout_width="@dimen/_1sdp"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/_3sdp"
-                        android:layout_marginBottom="@dimen/_3sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginBottom="@dimen/_5sdp"
                         android:background="@color/colorGrey"
                         >
 
@@ -131,6 +132,7 @@
                         <com.app.l_pesa.common.CommonTextRegular
                             android:layout_below="@+id/right_header"
                             android:id="@+id/right_header_txt"
+                            android:fontFamily="@font/montserrat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorApp"
@@ -173,6 +175,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/your_credit_score"
                 android:textSize="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_3sdp"
@@ -204,6 +207,7 @@
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_max"
+                android:fontFamily="@font/montserrat"
                 android:layout_alignParentEnd="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -216,6 +220,7 @@
                 />
                 <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_start"
+                android:fontFamily="@font/montserrat"
                 android:layout_alignParentStart="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
