--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -9,76 +9,84 @@
     >
 
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorWhite"
-        android:padding="@dimen/_3sdp">
+        android:layout_height="wrap_content"
+        >
 
-        <ImageView
-            android:id="@+id/imgLoan"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:contentDescription="@string/app_name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/lpk_round_logo" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txt_loan_type"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:fontFamily="@font/montserrat"
-            android:textColor="@color/dark_text_color"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintEnd_toStartOf="@+id/view45"
-            app:layout_constraintStart_toEndOf="@+id/imgLoan"
-            app:layout_constraintTop_toTopOf="@+id/imgLoan" />
+            <ImageView
+                android:id="@+id/imgLoan"
+                android:contentDescription="@string/app_name"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/lpk_round_logo" />
 
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/textView75"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:fontFamily="@font/montserrat"
-            android:textSize="@dimen/_9sdp"
-            app:layout_constraintBottom_toBottomOf="@+id/imgLoan"
-            app:layout_constraintEnd_toStartOf="@+id/view45"
-            app:layout_constraintStart_toEndOf="@+id/imgLoan"
-            app:layout_constraintTop_toBottomOf="@+id/txt_loan_type" />
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/textView74"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/cash_out_lpk"
+                android:textColor="@color/dark_text_color"
+                android:textSize="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                app:layout_constraintEnd_toStartOf="@+id/view45"
+                app:layout_constraintStart_toEndOf="@+id/imgLoan"
+                app:layout_constraintTop_toTopOf="@+id/imgLoan" />
 
-        <View
-            android:id="@+id/view45"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_apply_loan"
-            app:layout_constraintStart_toEndOf="@+id/txt_loan_type"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/textView75"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textSize="@dimen/_9sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="@+id/imgLoan"
+                app:layout_constraintEnd_toStartOf="@+id/view45"
+                app:layout_constraintStart_toEndOf="@+id/imgLoan"
+                app:layout_constraintTop_toBottomOf="@+id/textView74" />
 
-        <com.app.l_pesa.common.CustomButtonRegular
-            android:id="@+id/btn_apply_loan"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_22sdp"
-            android:background="@drawable/bg_button_grey"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/apply_loan"
-            android:textAllCaps="false"
-            android:textColor="@color/colorSemiWhite"
-            android:textSize="@dimen/_10sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view45"
-            app:layout_constraintTop_toTopOf="parent" />
+            <View
+                android:id="@+id/view45"
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="0dp"
+                android:visibility="invisible"
+                android:background="@color/divider_color"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_apply_loan"
+                app:layout_constraintStart_toEndOf="@+id/textView74"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/btn_apply_loan"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_23sdp"
+                android:layout_margin="@dimen/_2sdp"
+                android:background="@drawable/bg_button_grey"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/lets_do"
+                android:textAllCaps="false"
+                android:textColor="@color/colorSemiWhite"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/view45"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-    </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
